--- a/app-web-libri/src/components/pages/ListBooks.module.css
+++ b/app-web-libri/src/components/pages/ListBooks.module.css
@@ -1,7 +1,8 @@
-.list_book_container{ 
-    width: 100%; display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
-    padding: 4em; 
+.list_book_container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 4em;
 }
